cabal-version:       2.4

name:                semantic-core
version:             0.0.0.0
synopsis:            Semantic core intermediate language
description:         Core intermediate language for program analysis using abstract definitional interpretation.
homepage:            https://github.com/github/semantic/tree/master/semantic-core#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:
  GHC == 8.6.5

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Core.Core
    Core.Parser
    Core.Pretty
    Core.Eval
    Core.Name
  build-depends:
      base                         >= 4.13 && < 5
    , fused-effects               ^>= 1.0
    , fused-syntax
    , hashable
    , parsers                     ^>= 0.12.10
    , pathtype                    ^>= 0.8.1
    , prettyprinter                >= 1.2.1 && < 2
    , prettyprinter-ansi-terminal ^>= 1.1.1
    , semantic-analysis           ^>= 0
    , semantic-source             ^>= 0.0.2
    , text                        ^>= 1.2.3.1
    , trifecta                     >= 2 && < 2.2
    , unordered-containers        ^>= 0.2.10

test-suite test
  import: common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  other-modules:  Generators
  build-depends:
      base
    , semantic-analysis
    , semantic-core
    , semantic-source
    , fused-effects
    , fused-syntax
    , hedgehog ^>= 1
    , tasty >= 1.2 && <2
    , tasty-hedgehog ^>= 1.0.0.1
    , tasty-hunit >= 0.10 && <1
    , trifecta
