package(default_visibility = ["//visibility:public"])

load(
    "//:build/common.bzl",
    "semantic_language_library",
)
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_test",
)

semantic_language_library(
    name = "semantic-go",
    srcs = glob(["src/**/*.hs"]),
    language = "go",
)

haskell_test(
    name = "test",
    srcs = ["test/PreciseTest.hs"],
    data = ["@tree-sitter-go//:corpus"],
    deps = [
        ":semantic-go",
        "//:base",
        "//:bytestring",
        "//:text",
        "//semantic:fixtureshim",
        "//semantic-ast",
        "@stackage//:bazel-runfiles",
        "@stackage//:hedgehog",
        "@stackage//:pathtype",
        "@stackage//:tasty",
        "@stackage//:tasty-hedgehog",
        "@stackage//:tasty-hunit",
    ],
)
