cabal-version:       2.4

name:                semantic-java
version:             0.0.0.0
synopsis:            Semantic support for Java
description:         Semantic support for Java.
homepage:            https://github.com/github/semantic/tree/master/semantic-java#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.6.5

library
  exposed-modules:
    Language.Java
    Language.Java.AST
    Language.Java.Grammar
    Language.Java.Tags
  build-depends:
      base              >= 4.13 && < 5
    , fused-effects    ^>= 1.0
    , semantic-codegen
    , semantic-source  ^>= 0.0.2
    , semantic-tags    ^>= 0.0
    , template-haskell ^>= 2.15
    , tree-sitter      ^>= 0.8
    , tree-sitter-java ^>= 0.6.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
