cabal-version:       2.4

name:                semantic-java
version:             0.0.0.0
synopsis:            Semantic support for Java
description:         Semantic support for Java.
homepage:            https://github.com/github/semantic/tree/master/semantic-java#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.6.5

common haskell
  default-language:    Haskell2010
  build-depends:       base ^>= 4.13
                     , fused-effects ^>= 1.0
                     , fused-syntax
                     , parsers ^>= 0.12.10
                     , semantic-ast
                     , semantic-core ^>= 0.0
                     , semantic-source ^>= 0.0.2
                     , semantic-tags ^>= 0.0
                     , template-haskell ^>= 2.15
                     , text ^>= 1.2.3
                     , tree-sitter ^>= 0.9
                     , tree-sitter-java ^>= 0.7.0.1

  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: haskell
  exposed-modules:
    Language.Java
    Language.Java.AST
    Language.Java.Grammar
    Language.Java.Tags
  hs-source-dirs:      src

test-suite test
  import: haskell
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    base
                  , bytestring ^>= 0.10.8.2
                  , pathtype ^>= 0.8.1
                  , semantic-ast
                  , semantic-java
                  , tasty
                  , tasty-hunit
                  , text
