# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)
load(
    "//:build/common.bzl",
    "GHC_FLAGS",
)

# Doesn't build right now.

haskell_binary(
    name = "exe",
    srcs = ["app/Main.hs"],
    compiler_flags = GHC_FLAGS,
    deps = [
        "//:base",
        "//:bytestring",
        "//:text",
        "//semantic-ast",
        "//semantic-python",
        "//semantic-source",
        "@stackage//:aeson",
        "@stackage//:aeson-pretty",
        "@stackage//:optparse-applicative",
        "@stackage//:pretty-simple",
    ],
)
