cabal-version:       2.4

name:                semantic-php
version:             0.0.0.0
synopsis:            Semantic support for PHP.
description:         Semantic support for PHP.
homepage:            https://github.com/github/semantic/tree/master/semantic-php#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.6.5

common haskell
  default-language:    Haskell2010
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures

library
  import: haskell
  exposed-modules:
    Language.PHP
    Language.PHP.AST
    Language.PHP.Grammar
    Language.PHP.Tags
  hs-source-dirs: src
  build-depends:
    , base  >= 4.13 && < 5
    , fused-effects ^>= 1.1
    , semantic-ast
    , semantic-proto ^>= 0
    , semantic-source ^>= 0.1.0.1
    , semantic-tags ^>= 0.0
    , template-haskell  >= 2.15 && < 2.19
    , text ^>= 1.2.3
    , tree-sitter ^>= 0.9
    , tree-sitter-php ^>= 0.5.0.0
