# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
)
load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_binary",
    "haskell_cabal_library",
)

# You can add your own libraries with haskell_library.
haskell_library(
    name = "lib",
    srcs = glob(["src/**/*.hs"]),
    deps = [
        "//:base",
        "@stackage//:aeson",
        "@stackage//:proto-lens",
        "@stackage//:proto-lens-jsonpb",
        "@stackage//:proto-lens-runtime",
        "@stackage//:text",
    ],
)
