# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

load(
    "//:build/common.bzl",
    "semantic_language_library",
)

semantic_language_library(
    name = "semantic-python",
    srcs = glob(
        include = ["src/**/*.hs"],
        exclude = [
            "src/Language/Python/Core.hs",
            "src/Language/Python/ScopeGraph.hs",
        ],
    ),
    language = "python",
)
