cabal-version:       2.4

name:                semantic-python
version:             0.0.0.0
synopsis:            Semantic support for Python.
description:         Semantic support for Python using the semantic-core intermediate language.
homepage:            https://github.com/github/semantic/tree/master/semantic-python#readme
bug-reports:         https://github.com/github/semantic/issues
license:             MIT
license-file:        LICENSE
author:              The Semantic authors
maintainer:          opensource+semantic@github.com
copyright:           (c) 2019 GitHub, Inc.
category:            Language
build-type:          Simple
stability:           alpha
extra-source-files:  README.md

tested-with:         GHC == 8.6.4

common haskell
  default-language:    Haskell2010
  build-depends:       fused-effects ^>= 0.5.0.0
                     , base ^>=4.12.0.0
                     , semantic-core ^>= 0.0.0.0
                     , tree-sitter ^>= 0.1.0.0
                     , tree-sitter-python ^>= 0.2.0.0


library
  import: haskell
  exposed-modules:
    Language.Python.Core
  hs-source-dirs: src
  ghc-options:
    -Weverything
    -Wno-missing-local-signatures
    -Wno-missing-import-lists
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
    -Wno-name-shadowing
    -Wno-monomorphism-restriction
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-star-is-type

test-suite test
  import: haskell
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  build-depends: semantic-python == 0.0.0.0
               , tasty ^>= 1.2.3
               , tasty-hunit ^>= 0.10.0.2
               , directory ^>= 1.3.3.0
               , filepath ^>= 1.4.2.1
               , bytestring ^>= 0.10.8.2
