package(default_visibility = ["//visibility:public"])

load(
    "//:build/common.bzl",
    "semantic_language_library",
    "semantic_language_parsing_test",
)

semantic_language_library(
    name = "semantic-ruby",
    srcs = glob(["src/**/*.hs"]),
    language = "ruby",
    nodetypes = "@tree-sitter-ruby//:src/node-types.json",
)

semantic_language_parsing_test(language = "ruby")
