# Set all target’s visibility in this package to "public".
package(default_visibility = ["//visibility:public"])

# Load rules_haskell rules.
load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
)
load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_binary",
    "haskell_cabal_library",
)
load(
    "//:build/common.bzl",
    "STANDARD_GHC_WARNINGS",
)

# You can add your own libraries with haskell_library.
haskell_library(
    name = "semantic-scope-graph",
    srcs = glob(["src/**/*.hs"]),
    compiler_flags = STANDARD_GHC_WARNINGS + ["-XOverloadedStrings"],
    deps = [
        "//:base",
        "//:containers",
        "//:text",
        "//semantic-analysis",
        "//semantic-source",
        "@stackage//:aeson",
        "@stackage//:algebraic-graphs",
        "@stackage//:fused-effects",
        "@stackage//:generic-lens",
        "@stackage//:generic-monoid",
        "@stackage//:hashable",
        "@stackage//:lens",
        "@stackage//:pathtype",
        "@stackage//:semilattices",
    ],
)
