package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
)
load(
    "@rules_haskell//haskell:cabal.bzl",
    "haskell_cabal_binary",
    "haskell_cabal_library",
)
load(
    "//:build/common.bzl",
    "GHC_FLAGS",
)

haskell_library(
    name = "semantic-scope-graph",
    srcs = glob(["src/**/*.hs"]),
    compiler_flags = GHC_FLAGS + ["-XOverloadedStrings"],
    deps = [
        "//:base",
        "//:containers",
        "//:process",
        "//:text",
        "//semantic-analysis",
        "//semantic-source",
        "//semantic-ast",
        "//semantic-proto",
        "@stackage//:fused-effects-exceptions",
        "@stackage//:aeson",
        "@stackage//:algebraic-graphs",
        "@stackage//:fused-effects",
        "@stackage//:comonad",
        "@stackage//:generic-lens",
        "@stackage//:hashable",
        "@stackage//:lens",
        "@stackage//:monoid-subclasses",
        "@stackage//:pathtype",
        "@stackage//:semilattices",
        "@stackage//:streaming",
        "@stackage//:streaming-bytestring",
        "@stackage//:streaming-process",
    ],
)
